--- a/web/templates/sherlock-ui/logs.html
+++ b/web/templates/sherlock-ui/logs.html
@@ -3,40 +3,90 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Logs Sherlock</title>
-    <script src="https://cdn.socket.io/4.0.1/socket.io.min.js"></script>
+    <title>Logs - Sherlock WebUI</title>
+    <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+        background-color: #f9f9f9;
+      }
+
+      header {
+        background-color: #333;
+        color: #fff;
+        padding: 20px;
+        text-align: center;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      header h1 {
+        font-size: 1.5rem;
+      }
+
+      #logs {
+        flex: 1;
+        background-color: #fff;
+        padding: 20px;
+        border: 1px solid #ccc;
+        overflow-y: auto;
+      }
+
+      #logs p {
+        margin: 5px 0;
+        padding: 10px;
+        background-color: #f4f4f4;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+      }
+
+      footer {
+        background-color: #333;
+        color: #fff;
+        text-align: center;
+        padding: 10px;
+        font-size: 0.9rem;
+      }
+    </style>
     <script>
+      const socket = io();
+
       window.onbeforeunload = function () {
         return "The search is in progress. Are you sure you want to leave?";
       };
 
-      const socket = io();
-      const logsDiv = document.getElementById("logs");
-
       socket.on("log", (data) => {
+        //console.log("Log received:", data); // Debugging
+        const logsDiv = document.getElementById("logs");
         const logLine = document.createElement("p");
         logLine.textContent = data.data;
         logsDiv.appendChild(logLine);
-        logsDiv.scrollTop = logsDiv.scrollHeight; // Auto-scroll
+        logsDiv.scrollTop = logsDiv.scrollHeight;
       });
 
       socket.on("log_done", () => {
-        window.onbeforeunload = null; // Cancels closing prevention
+        window.onbeforeunload = null;
         alert("Search complete!");
       });
     </script>
   </head>
   <body>
-    <h1>Logs Sherlock</h1>
-    <div
-      id="logs"
-      style="
-        background-color: #f4f4f4;
-        padding: 10px;
-        border: 1px solid #ccc;
-        height: 300px;
-        overflow-y: auto;
-      "
-    ></div>
+    <header>
+      <a href="/sherlock" style="text-decoration: none; color: #ddd">
+        <h1>Sherlock Logs</h1>
+      </a>
+    </header>
+    <div id="logs"></div>
+    <footer>&copy; 2025 Sherlock WebUI. All rights reserved.</footer>
   </body>
 </html>
